--- a/src/GCIntranet/Pages/Index.cshtml
+++ b/src/GCIntranet/Pages/Index.cshtml
@@ -1,96 +1,121 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Content page - No search, language toggle, site menu or breadcrumb trail";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+<section>
+    <h2>Heading&#32;2&#32;(<code>h2</code>)</h2>
+    <section>
+        <h3>Heading&#32;3&#32;(<code>h3</code>)</h3>
+        <section>
+            <h4>Heading&#32;4&#32;(<code>h4</code>)</h4>
+            <section>
+                <h5>Heading&#32;5&#32;(<code>h5</code>)</h5>
+                <section>
+                    <h6>Heading&#32;6&#32;(<code>h6</code>)</h6>
+                    <p>Paragraph - default appearance</p>
+                </section>
+            </section>
+        </section>
+    </section>
+</section>
+<p><a href="#">Link</a></p>
+<ul>
+    <li>
+        unordered list&#32;(<code>ul</code>) - level&#32;1
+        <ul>
+            <li>
+                unordered list&#32;(<code>ul</code>) - level&#32;2
+                <ul>
+                    <li>unordered list&#32;(<code>ul</code>) - level&#32;3</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+</ul>
+<ol>
+    <li>ordered list&#32;(<code>ol</code>) - level&#32;1</li>
+    <li>
+        ordered list&#32;(<code>ol</code>) - level&#32;1
+        <ol>
+            <li>ordered list&#32;(<code>ol</code>) - level&#32;2</li>
+            <li>
+                ordered list&#32;(<code>ol</code>) - level&#32;2
+                <ol>
+                    <li>ordered list&#32;(<code>ol</code>) - level&#32;3</li>
+                    <li>ordered list&#32;(<code>ol</code>) - level&#32;3</li>
+                </ol>
+            </li>
+        </ol>
+    </li>
+</ol>
+<table class="table table-striped">
+    <caption>Table caption</caption>
+    <thead>
+        <tr>
+            <th scope="col">Table header&#32;(<code>th</code>)</th>
+            <th scope="col">Table header&#32;(<code>th</code>)</th>
+            <th scope="col">Table header&#32;(<code>th</code>)</th>
+            <th scope="col">Table header&#32;(<code>th</code>)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+        </tr>
+        <tr>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+        </tr>
+        <tr>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+            <td>Table data&#32;(<code>td</code>)</td>
+        </tr>
+    </tbody>
+</table>
+<form method="post" action="#" class="form-horizontal">
+    <div class="form-group">
+        <label for="data1" class="col-sm-3 control-label">Form&#32;<code>input</code></label>
+        <div class="col-sm-9">
+            <input type="text" id="data1" name="data1" class="form-control">
         </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="data2" class="col-sm-3 control-label">Form&#32;<code>textarea</code></label>
+        <div class="col-sm-9">
+<textarea id="data2" rows="3" cols="15" name="data2" class="form-control"></textarea>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core Razor Pages</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+    <div class="form-group">
+        <label for="data4" class="col-sm-3 control-label">Form&#32;<code>select</code></label>
+        <div class="col-sm-9">
+            <select name="data4" id="data4" class="form-control">
+                <option value="1">Option&#32;1</option>
+                <option value="2">Option&#32;2</option>
+                <option value="3">Option&#32;3</option>
+                <option value="4">Option&#32;4</option>
+            </select>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-        </ul>
-    </div>
-</div>
+</form>
+<blockquote>
+    <p>"<code>blockquote</code>"</p>
+    <footer><code>footer</code> <cite><code>cite</code></cite></footer>
+</blockquote>
+<dl id="wb-dtmd">
+    <dt>Date modified:&#32;</dt>
+    <dd><time property="dateModified">2014-02-19</time></dd>
+</dl>
