--- a/src/GCIntranet/Pages/Shared/_Layout.cshtml
+++ b/src/GCIntranet/Pages/Shared/_Layout.cshtml
@@ -1,72 +1,61 @@
 ﻿<!DOCTYPE html>
-<html>
+<html class="no-js" lang="en" dir="ltr">
 <head>
     <meta charset="utf-8" />
+    <title>@ViewData["Title"]  - Working examples - Web Experience Toolkit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - GCIntranet</title>
-
+    <!-- Meta data -->
+    <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+    <meta name="dcterms.title" content="Content page - No search, language toggle, site menu or breadcrumb trail - Web Experience Toolkit">
+    <meta name="dcterms.creator" content="French name of the content author / Nom en français de l'auteur du contenu">
+    <meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)">
+    <meta name="dcterms.modified" title="W3CDTF" content="Date modified (YYYY-MM-DD) / Date de modification (AAAA-MM-JJ)">
+    <meta name="dcterms.subject" title="scheme" content="French subject terms / Termes de sujet en français">
+    <meta name="dcterms.language" title="ISO639-2" content="eng">
+    <!-- Meta data-->
+    <link href="~/lib/wet-boew/dist/theme-gc-intranet/assets/favicon.ico" rel="icon" type="image/x-icon">
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/wet-boew/dist/theme-gc-intranet/css/theme.css">
         <link rel="stylesheet" href="~/css/site.css" />
+        <noscript><link rel="stylesheet" href="~/lib/wet-boew/dist/wet-boew/css/noscript.css" /></noscript>
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/lib/wet-boew/dist/theme-gc-intranet/css/theme.min.css">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <noscript><link rel="stylesheet" href="~/lib/wet-boew/dist/wet-boew/css/noscript.min.css" /></noscript>
     </environment>
 </head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-page="/Index" class="navbar-brand">GCIntranet</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
-                </ul>
-                <p class="nav navbar-text navbar-right">Hello, @User.Identity.Name!</p>
-            </div>
-        </div>
-    </nav>
+<body vocab="http://schema.org/" typeof="WebPage">
+    <ul id="wb-tphp">
+        <li class="wb-slc">
+            <a class="wb-sl" href="#wb-cont">Skip to main content</a>
+        </li>
+        <li class="wb-slc visible-sm visible-md visible-lg">
+            <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
+        </li>
+    </ul>
+    <partial name="_HeaderPartial" />
+    <main role="main" property="mainContentOfPage" class="container">
+        <h1 id="wb-cont" property="name">@ViewData["Title"]</h1>
 
-    <partial name="_CookieConsentPartial" />
-
-    <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2019 - GCIntranet</p>
-        </footer>
-    </div>
-
+    </main>
+    <partial name="_FooterPartial" />
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/wet-boew/dist/wet-boew/js/jquery/2.1.4/jquery.js"></script>
+        <script src="~/lib/wet-boew/dist/wet-boew/js/wet-boew.js"></script>
+        <script src="~/lib/wet-boew/dist/theme-gc-intranet/js/theme.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
+                asp-fallback-src="~/lib/wet-boew/dist/wet-boew/js/jquery/2.1.4/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+                integrity="sha384-8gBf6Y4YYq7Jx97PIqmTwLPin4hxIzQw5aDmUg/DDhul9fFpbbLcLh3nTIIDJKhx">
         </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
-        </script>
+        <script src="~/lib/wet-boew/dist/wet-boew/js/wet-boew.min.js"></script>
+        <script src="~/lib/wet-boew/dist/theme-gc-intranet/js/theme.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
