--- a/src/GCIntranet/Pages/Error.cshtml
+++ b/src/GCIntranet/Pages/Error.cshtml
@@ -1,23 +1,18 @@
 ﻿@page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Message title";
+    Layout = "~/Pages/Shared/_LayoutError.cshtml";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="col-md-12">
+    <h1><span class="glyphicon glyphicon-warning-sign mrgn-rght-md"></span> @ViewData["Title"]</h1>
+    <p>Sample text.&#32;Sample text.&#32;Sample text.&#32;Sample text.&#32;Sample text.&#32;Sample text.&#32;Sample text.</p>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+    @if (Model.ShowRequestId)
+    {
+        <p>
+            <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        </p>
+    }
+</div>
