--- a/src/GCIntranet/Pages/Shared/_FooterPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_FooterPartial.cshtml
@@ -1,38 +1,40 @@
-﻿<footer role="contentinfo" id="wb-info" class="visible-sm visible-md visible-lg wb-navcurr">
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+<footer role="contentinfo" id="wb-info" class="visible-sm visible-md visible-lg wb-navcurr">
     <div class="container">
         <nav role="navigation">
-            <h2>About this site</h2>
+            <h2>@Localizer["About this site"]</h2>
             <div class="row">
                 <section class="col-sm-3">
-                    <h3>Contact us</h3>
+                    <h3>@Localizer["Contact us"]</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://github.com/wet-boew/wet-boew/issues/new">Questions or comments?</a></li>
+                        <li><a href="https://github.com/wet-boew/wet-boew/issues/new">@Localizer["Questions or comments?"]</a></li>
                     </ul>
                 </section>
                 <section class="col-sm-3">
-                    <h3>About</h3>
+                    <h3>@Localizer["About"]</h3>
                     <ul class="list-unstyled">
-                        <li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#about">About the Web Experience Toolkit</a></li>
-                        <li><a href="http://www.tbs-sct.gc.ca/ws-nw/index-eng.asp">About the Web Standards</a></li>
+                        <li><a href="http://wet-boew.github.io/v4.0-ci/index-@(Localizer["en"]).html#about">@Localizer["About the Web Experience Toolkit"]</a></li>
+                        <li><a href="http://www.tbs-sct.gc.ca/ws-nw/index-@(Localizer["eng"]).asp">@Localizer["About the Web Standards"]</a></li>
                     </ul>
                 </section>
                 <section class="col-sm-3">
-                    <h3>News</h3>
+                    <h3>@Localizer["News"]</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://github.com/wet-boew/wet-boew/pulse">Recent project activity</a></li>
-                        <li><a href="https://github.com/wet-boew/wet-boew/graphs">Project statistics</a></li>
+                        <li><a href="https://github.com/wet-boew/wet-boew/pulse">@Localizer["Recent project activity"]</a></li>
+                        <li><a href="https://github.com/wet-boew/wet-boew/graphs">@Localizer["Project statistics"]</a></li>
                     </ul>
                 </section>
                 <section class="col-sm-3">
-                    <h3>Stay connected</h3>
+                    <h3>@Localizer["Stay connected"]</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://twitter.com/WebExpToolkit">Twitter</a></li>
+                        <li>@Localizer["<a href=\"https://twitter.com/WebExpToolkit\">Twitter</a>"]</li>
                     </ul>
                 </section>
             </div>
             <ul id="gc-tctr" class="list-inline">
-                <li><a rel="license" href="http://wet-boew.github.io/wet-boew/License-en.html">Terms and conditions</a></li>
-                <li><a href="http://www.tbs-sct.gc.ca/tbs-sct/common/trans-eng.asp">Transparency</a></li>
+                <li><a rel="license" href="http://wet-boew.github.io/wet-boew/License-en.html">@Localizer["Terms and conditions"]</a></li>
+                <li><a href="http://www.tbs-sct.gc.ca/tbs-sct/common/trans-@(Localizer["eng"]).asp">@Localizer["Transparency"]</a></li>
             </ul>
         </nav>
     </div>
