--- a/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
@@ -1,13 +1,15 @@
-﻿<header role="banner">
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+<header role="banner">
     <div id="wb-bnr">
         <div id="wb-bar">
             <div class="container">
                 <div class="row">
-                    <img id="gcwu-sig" src="~/lib/wet-boew/dist/theme-gc-intranet/assets/sig-blk-en.svg" alt="Government of Canada / Gouvernement du Canada">
+                    <img id="gcwu-sig" src="~/lib/wet-boew/dist/theme-gc-intranet/assets/sig-blk-@(Localizer["en"]).svg" alt="@Localizer["Government of Canada / Gouvernement du Canada"]">
                     <section class="wb-mb-links col-xs-12 visible-sm visible-xs" id="wb-glb-mn">
-                        <h2>Search and menus</h2>
+                        <h2>@Localizer["Search and menus"]</h2>
                         <ul class="pnl-btn list-inline text-right">
-                            <li><a href="#mb-pnl" title="Search and menus" aria-controls="mb-pnl" class="overlay-lnk btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-search"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">Search and menus</span></span></span></a></li>
+                            <li><a href="#mb-pnl" title="@Localizer["Search and menus"]" aria-controls="mb-pnl" class="overlay-lnk btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-search"><span class="glyphicon glyphicon-th-list"><span class="wb-inv">@Localizer["Search and menus"]</span></span></span></a></li>
                         </ul>
                         <div id="mb-pnl"></div>
                     </section>
@@ -18,9 +20,9 @@
             <div class="row">
                 <div id="wb-sttl" class="col-md-12">
                     <a asp-page="/Index">
-                        <span>Web Experience Toolkit</span>
+                        <span>@Localizer["Web Experience Toolkit"]</span>
                     </a>
-                    <img id="wmms" src="~/lib/wet-boew/dist/theme-gc-intranet/assets/wmms-intra.svg" alt="Symbol of the Government of Canada">
+                    <img id="wmms" src="~/lib/wet-boew/dist/theme-gc-intranet/assets/wmms-intra.svg" alt="@Localizer["Symbol of the Government of Canada"]">
                 </div>
             </div>
         </div>
