Add site menu and breadcrumb partials.
This turns the example page into a normal content page example.

--- a/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
@@ -29,5 +29,8 @@
             <partial name="_SearchPartial" />
         </div>
     </div>
-    <span data-trgt="mb-pnl" class="wb-menu hide"></span>
+    @*NOTE: The next line is required when the site menu and breadcrumbs are not used.
+        <span data-trgt="mb-pnl" class="wb-menu hide"></span>*@
+    <partial name="_SiteMenuPartial" />
+    <partial name="_BreadcrumbPartial"/>
 </header>
