--- a/src/GCIntranet/Pages/Index.cshtml
+++ b/src/GCIntranet/Pages/Index.cshtml
@@ -1,121 +1,43 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Content page - No search, language toggle, site menu or breadcrumb trail";
+    ViewData["Title"] = "Government of Canada Intranet theme";
 }
 
-<section>
-    <h2>Heading&#32;2&#32;(<code>h2</code>)</h2>
     <section>
-        <h3>Heading&#32;3&#32;(<code>h3</code>)</h3>
-        <section>
-            <h4>Heading&#32;4&#32;(<code>h4</code>)</h4>
-            <section>
-                <h5>Heading&#32;5&#32;(<code>h5</code>)</h5>
-                <section>
-                    <h6>Heading&#32;6&#32;(<code>h6</code>)</h6>
-                    <p>Paragraph - default appearance</p>
-                </section>
-            </section>
-        </section>
-    </section>
-</section>
-<p><a href="#">Link</a></p>
-<ul>
-    <li>
-        unordered list&#32;(<code>ul</code>) - level&#32;1
+        <h2 id="en" tabindex="-1">English</h2>
         <ul>
-            <li>
-                unordered list&#32;(<code>ul</code>) - level&#32;2
-                <ul>
-                    <li>unordered list&#32;(<code>ul</code>) - level&#32;3</li>
-                </ul>
-            </li>
+            <li><a asp-page="/Content" asp-route-culture="en">Content page<span class="wb-inv"> - English</span></a></li>
+            <li>Content page - Secondary menu<span class="wb-inv"> - English</span></li>
+            <li>Content page - Sub-site<span class="wb-inv"> - English</span></li>
+            <li>Content page - No search or language selection link<span class="wb-inv"> - English</span></li>
+            <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - English</span></li>
+            <li>Content page - No search, language selection link, site menu or breadcrumb trail<span class="wb-inv"> - English</span></li>
+            <li>Content page - Signed Off<span class="wb-inv"> - English</span></li>
+            <li>Content page - Signed On<span class="wb-inv"> - English</span></li>
+            <li><a asp-page="/SplashPage">Splash page<span class="wb-inv"> - English</span></a></li>
+            <li>404 error page<span class="wb-inv"> - English</span></li>
+            <li><a asp-page="/Error404">404 error page - English/French</a></li>
+            <li>Server message page - English/French</li>
+            <li><a asp-page="/Error" asp-route-culture="en">Server message page<span class="wb-inv"> - English</span></a></li>
         </ul>
-    </li>
-</ul>
-<ol>
-    <li>ordered list&#32;(<code>ol</code>) - level&#32;1</li>
-    <li>
-        ordered list&#32;(<code>ol</code>) - level&#32;1
-        <ol>
-            <li>ordered list&#32;(<code>ol</code>) - level&#32;2</li>
-            <li>
-                ordered list&#32;(<code>ol</code>) - level&#32;2
-                <ol>
-                    <li>ordered list&#32;(<code>ol</code>) - level&#32;3</li>
-                    <li>ordered list&#32;(<code>ol</code>) - level&#32;3</li>
-                </ol>
-            </li>
-        </ol>
-    </li>
-</ol>
-<table class="table table-striped">
-    <caption>Table caption</caption>
-    <thead>
-        <tr>
-            <th scope="col">Table header&#32;(<code>th</code>)</th>
-            <th scope="col">Table header&#32;(<code>th</code>)</th>
-            <th scope="col">Table header&#32;(<code>th</code>)</th>
-            <th scope="col">Table header&#32;(<code>th</code>)</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-        </tr>
-        <tr>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-        </tr>
-        <tr>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-            <td>Table data&#32;(<code>td</code>)</td>
-        </tr>
-    </tbody>
-</table>
-<form method="post" action="#" class="form-horizontal">
-    <div class="form-group">
-        <label for="data1" class="col-sm-3 control-label">Form&#32;<code>input</code></label>
-        <div class="col-sm-9">
-            <input type="text" id="data1" name="data1" class="form-control">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="data2" class="col-sm-3 control-label">Form&#32;<code>textarea</code></label>
-        <div class="col-sm-9">
-<textarea id="data2" rows="3" cols="15" name="data2" class="form-control"></textarea>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="data4" class="col-sm-3 control-label">Form&#32;<code>select</code></label>
-        <div class="col-sm-9">
-            <select name="data4" id="data4" class="form-control">
-                <option value="1">Option&#32;1</option>
-                <option value="2">Option&#32;2</option>
-                <option value="3">Option&#32;3</option>
-                <option value="4">Option&#32;4</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </div>
-</form>
-<blockquote>
-    <p>"<code>blockquote</code>"</p>
-    <footer><code>footer</code> <cite><code>cite</code></cite></footer>
-</blockquote>
-<dl id="wb-dtmd">
-    <dt>Date modified:&#32;</dt>
-    <dd><time property="dateModified">2014-02-19</time></dd>
-</dl>
+    </section>
+
+    <section>
+        <h2 id="fr" tabindex="-1">French</h2>
+        <ul>
+            <li><a asp-page="/Content" asp-route-culture="fr">Content page<span class="wb-inv"> - French</span></a></li>
+            <li>Content page - Secondary menu<span class="wb-inv"> - French</span></li>
+            <li>Content page - Sub-site<span class="wb-inv"> - French</span></li>
+            <li>Content page - No search or language selection link<span class="wb-inv"> - French</span></li>
+            <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - French</span></li>
+            <li>Content page - No search, language selection link, site menu or breadcrumb trail<span class="wb-inv"> - French</span></li>
+            <li>Content page - Signed Off<span class="wb-inv"> - French</span></li>
+            <li>Content page - Signed On<span class="wb-inv"> - French</span></li>
+            <li>Splash page<span class="wb-inv"> - French</span></li>
+            <li>404 error page<span class="wb-inv"> - French</span></li>
+            <li>404 error page - French/English</li>
+            <li>Server message page - French/English</li>
+            <li>Server message page<span class="wb-inv"> - French</span></li>
+        </ul>
+    </section>
