--- a/src/GCIntranet/Pages/Shared/_Layout.cshtml
+++ b/src/GCIntranet/Pages/Shared/_Layout.cshtml
@@ -1,20 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
-<html class="no-js" lang="@Localizer["en"]" dir="ltr">
+<html class="no-js" lang="@Localizer["en"]" dir="@Localizer["ltr"]">
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"]  - Working examples - Web Experience Toolkit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Meta data -->
-    <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
-    <meta name="dcterms.title" content="Content page - No search, language toggle, site menu or breadcrumb trail - Web Experience Toolkit">
-    <meta name="dcterms.creator" content="French name of the content author / Nom en français de l'auteur du contenu">
-    <meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)">
-    <meta name="dcterms.modified" title="W3CDTF" content="Date modified (YYYY-MM-DD) / Date de modification (AAAA-MM-JJ)">
-    <meta name="dcterms.subject" title="scheme" content="French subject terms / Termes de sujet en français">
-    <meta name="dcterms.language" title="ISO639-2" content="@Localizer["eng"]">
-    <!-- Meta data-->
+    <partial name="_MetadataPartial" />
     <link href="~/lib/wet-boew/dist/theme-gc-intranet/assets/favicon.ico" rel="icon" type="image/x-icon">
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/wet-boew/dist/theme-gc-intranet/css/theme.css">
@@ -41,6 +33,7 @@
         <h1 id="wb-cont" property="name">@ViewData["Title"]</h1>
 
         @RenderBody()
+        @RenderSection("DateModified", required: false)
     </main>
     <partial name="_FooterPartial" />
     <environment include="Development">
