--- a/src/GCIntranet/Pages/Index.cshtml
+++ b/src/GCIntranet/Pages/Index.cshtml
@@ -10,7 +10,7 @@
     <h2 id="en" tabindex="-1">English</h2>
     <ul>
         <li><a asp-page="/Content" asp-route-culture="en">Content page<span class="wb-inv"> - English</span></a></li>
-        <li>Content page - Secondary menu<span class="wb-inv"> - English</span></li>
+        <li><a asp-page="/Content_SecMenu" asp-route-culture="en">Content page - Secondary menu<span class="wb-inv"> - English</span></a></li>
         <li>Content page - Sub-site<span class="wb-inv"> - English</span></li>
         <li>Content page - No search or language selection link<span class="wb-inv"> - English</span></li>
         <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - English</span></li>
@@ -29,7 +29,7 @@
     <h2 id="fr" tabindex="-1">French</h2>
     <ul>
         <li><a asp-page="/Content" asp-route-culture="fr">Content page<span class="wb-inv"> - French</span></a></li>
-        <li>Content page - Secondary menu<span class="wb-inv"> - French</span></li>
+        <li><a asp-page="/Content_SecMenu" asp-route-culture="fr">Content page - Secondary menu<span class="wb-inv"> - French</span></a></li>
         <li>Content page - Sub-site<span class="wb-inv"> - French</span></li>
         <li>Content page - No search or language selection link<span class="wb-inv"> - French</span></li>
         <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - French</span></li>
