--- a/src/GCIntranet/Pages/Shared/_BreadcrumbPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_BreadcrumbPartial.cshtml
@@ -13,9 +13,9 @@
                     <a href="http://wet-boew.github.io/v4.0-ci/demos/index-en.html">Working examples</a>
                 </li>
                 <li>
-                    <a href="index-en.html">Government of Canada Intranet theme</a>
+                    <a asp-page="/Index">Government of Canada Intranet theme</a>
                 </li>
-                <li>Content page</li>
+                <li>@ViewData["Title"]</li>
             </ol>
         </div>
     </div>
