Add sub-site example.

--- a/src/GCIntranet/Pages/Index.cshtml
+++ b/src/GCIntranet/Pages/Index.cshtml
@@ -11,7 +11,7 @@
     <ul>
         <li><a asp-page="/Content" asp-route-culture="en">Content page<span class="wb-inv"> - English</span></a></li>
         <li><a asp-page="/Content_SecMenu" asp-route-culture="en">Content page - Secondary menu<span class="wb-inv"> - English</span></a></li>
-        <li>Content page - Sub-site<span class="wb-inv"> - English</span></li>
+        <li><a asp-page="/Content_Subsite" asp-route-culture="en">Content page - Sub-site<span class="wb-inv"> - English</span></a></li>
         <li>Content page - No search or language selection link<span class="wb-inv"> - English</span></li>
         <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - English</span></li>
         <li>Content page - No search, language selection link, site menu or breadcrumb trail<span class="wb-inv"> - English</span></li>
@@ -30,7 +30,7 @@
     <ul>
         <li><a asp-page="/Content" asp-route-culture="fr">Content page<span class="wb-inv"> - French</span></a></li>
         <li><a asp-page="/Content_SecMenu" asp-route-culture="fr">Content page - Secondary menu<span class="wb-inv"> - French</span></a></li>
-        <li>Content page - Sub-site<span class="wb-inv"> - French</span></li>
+        <li><a asp-page="/Content_Subsite" asp-route-culture="fr">Content page - Sub-site<span class="wb-inv"> - French</span></a></li>
         <li>Content page - No search or language selection link<span class="wb-inv"> - French</span></li>
         <li>Content page - No site menu or breadcrumb trail<span class="wb-inv"> - French</span></li>
         <li>Content page - No search, language selection link, site menu or breadcrumb trail<span class="wb-inv"> - French</span></li>
