--- a/src/GCIntranet/Pages/Shared/_SubsitePartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_SubsitePartial.cshtml
@@ -5,7 +5,7 @@
         <div class="row col-md-12">
             <div id="wb-ss">
                 <a href="#">
-                    @Localizer["Sub-site name"]
+                    @ViewData["SubSiteName"]
                 </a>
             </div>
         </div>
