--- a/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_HeaderPartial.cshtml
@@ -1,12 +1,21 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Options
+
 @inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
 <header role="banner">
     <div id="wb-bnr">
         <div id="wb-bar">
             <div class="container">
                 <div class="row">
                     <img id="gcwu-sig" src="~/lib/wet-boew/dist/theme-gc-intranet/assets/sig-blk-@(Localizer["en"]).svg" alt="@Localizer["Government of Canada / Gouvernement du Canada"]">
-                    <partial name="_SelectLanguagePartial" />
+                    @if (LocOptions.Value.SupportedUICultures.Count > 1)
+                    {
+                        //Show the language switcher only if multiple cultures defined in Startup.cs
+                        <partial name="_SelectLanguagePartial" />
+                    }
                     <section class="wb-mb-links col-xs-12 visible-sm visible-xs" id="wb-glb-mn">
                         <h2>@Localizer["Search and menus"]</h2>
                         <ul class="pnl-btn list-inline text-right">
