Add date modified partial to replace section.
* Small fix to subject of metadata partial.
* Update readme.

--- a/src/GCIntranet/Pages/Content.cshtml
+++ b/src/GCIntranet/Pages/Content.cshtml
@@ -6,6 +6,8 @@
     ViewData["Title"] = @Localizer["Content page"];
     ViewData["Description"] = @Localizer["Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities"];
     ViewData["Subject"] = @Localizer["French subject terms / Termes de sujet en français"];
+    ViewData["Issued"] = "2019-12-15";
+    ViewData["Modified"] = "2019-12-16";
 }
 
 <section>
@@ -119,12 +121,3 @@
     <p>"<code>blockquote</code>"</p>
     <footer><code>footer</code> <cite><code>cite</code></cite></footer>
 </blockquote>
-
-@section DateModified
-{
-    <dl id="wb-dtmd">
-        <dt>Date modified:&#32;</dt>
-        <dd><time property="dateModified">2014-02-19</time></dd>
-    </dl>
-}
-
