--- a/src/GCIntranet/Pages/Index.cshtml
+++ b/src/GCIntranet/Pages/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Government of Canada Intranet theme";
     ViewData["Description"] = "Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities";
     ViewData["Subject"] = "French subject terms / Termes de sujet en français";
+    ViewData["Issued"] = "2019-12-15";
+    ViewData["Modified"] = "2019-12-16";
 }
 
 <section>
@@ -43,11 +45,3 @@
         <li>Server message page<span class="wb-inv"> - French</span></li>
     </ul>
 </section>
-
-@section DateModified
-{
-    <dl id="wb-dtmd">
-        <dt>Date modified:&#32;</dt>
-        <dd><time property="dateModified">2019-12-15</time></dd>
-    </dl>
-}
