--- a/src/GCIntranet/Pages/Shared/_Layout.cshtml
+++ b/src/GCIntranet/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,11 @@
         <h1 id="wb-cont" property="name">@ViewData["Title"]</h1>
 
         @RenderBody()
-        @RenderSection("DateModified", required: false)
+
+        @if (!string.IsNullOrWhiteSpace(ViewData["Modified"]?.ToString()))
+        {
+            <partial name="_DateModifiedPartial" />
+        }
     </main>
     <partial name="_FooterPartial" />
     <environment include="Development">
