Place typical unobtrusive validation files (unused)
Add the files that would typically be used for client-side unobtrusive validation, but keep them inactive until a script can be written to handle this correctly.

Uncomment the `partial` tag for `_ValidationScriptsPartial` to enable unobtrusive client-side validation.

--- a/src/GCIntranet/Pages/demos/formvalid/Index.cshtml
+++ b/src/GCIntranet/Pages/demos/formvalid/Index.cshtml
@@ -77,3 +77,7 @@
     </form>
     @*</div>*@
 </section>
+@section scripts{
+    @* Uncomment this to enable client-side unobtrusive validation. *@
+    @*<partial name="_ValidationScriptsPartial" />*@
+}
