--- a/src/GCIntranet/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/src/GCIntranet/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -4,7 +4,19 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </environment>
 <environment exclude="Development">
-    <script src="~/lib/jquery-validation/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation/additional-methods.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"
+            asp-fallback-src="~/lib/jquery-validation/jquery.validate.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator"
+            crossorigin="anonymous"
+            integrity="sha384-cs1D9mYtA60FIcsT1T7+pERF8l9Ynz6WMFXyrBFkf2ewKQnOOprsRwo4sC+Kacmi"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/additional-methods.min.js"
+            asp-fallback-src="~/lib/jquery-validation/additional-methods.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.alphanumeric"
+            crossorigin="anonymous"
+            integrity="sha384-OsPPRz583XrQr9YYGB4Npvku6Ktw3QqQPNbpV3t+2zf3dkWgX/TUFl3QHUr0HXxy"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"
+            asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive"
+            crossorigin="anonymous"
+            integrity="sha384-R3vNCHsZ+A2Lo3d5A6XNP7fdQkeswQWTIPfiYwSpEP3YV079R+93YzTeZRah7f/F"></script>
 </environment>
